--- a/public/index.html
+++ b/public/index.html
@@ -12,12 +12,12 @@
     <link rel="stylesheet" href="%PUBLIC_URL%/css/magnific-popup.css">
 
 
-    <title>Nordic Giant Development</title>
+    <title>Alize Hassan</title>
   </head>
 
   <body>
     <noscript>
-      You need to enable JavaScript to run this app.
+      
     </noscript>
     <div id="root"></div>
 
